# command-watcher

./: .gitignore  .gitmodules  CHANGELOG.md  Justfile  README.rst  pyproject.toml  tox.ini
command_watcher/: __init__.py  config.py  email.py  icinga.py  log.py  message.py  report.py  utils.py
command_watcher/channels/: base_channel.py  beep.py  email.py  icinga.py
docs/: conf.py  index.rst  requirements.txt
examples/: log_stderr.py
src/command_watcher/: __init__.py  message.py
src/command_watcher/channels/: base_channel.py  email.py
tests/: conftest.py  helper.py  test_command_watcher.py  test_integration.py  test_log.py  test_main.py  test_report.py  test_utils.py
tests/files/: conf.yml
