[tool.poetry]
name = "command_watcher"
version = "0.1.0"
description = "Module to watch the execution of shell scripts. Both streams (`stdout` and `stderr`) are captured."
authors = ["Josef Friedrich <josef@friedrich.rocks>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/Josef-Friedrich/command-watcher"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.8"
conf2levels = "^0.4.0"
jflib = "^1.0.0"
termcolor = "^1.1.0"
types-requests = "^2.28.1"
types-termcolor = "^1.1.5"
icinga2apic = { git = "https://github.com/jf-forks/icinga2apic.git", branch = "master", rev = "d5f12033894c33d434fcc8e1aa6db8a2b80b549d" }

[tool.poetry.group.dev.dependencies]
tox = "^3.25.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry>=1.2.0b2"]
build-backend = "poetry.masonry.api"
