[project]
name = "command_watcher"
version = "0.6.0"
description = "Module to watch the execution of shell scripts. Both streams (`stdout` and `stderr`) are captured."
authors = [{ name = "Josef Friedrich", email = "josef@friedrich.rocks" }]
requires-python = ">=3.12,<4"
readme = "README.rst"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pretiac>=0.6.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "termcolor>=3.3.0",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20260107",
    "types-termcolor>=1.1.6.2",
]

[project.urls]
Repository = "https://github.com/Josef-Friedrich/command-watcher"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "stdout-stderr-capturing>=0.2.1",
]

[tool.uv]

[tool.uv.sources]
pretiac = { git = "https://github.com/Josef-Friedrich/PREtty-Typed-Icinga2-Api-Client_py.git" }

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
verbosity_assertions = 2
truncation_limit_lines = 999999
truncation_limit_chars = 999999
